--- a/pedi2t/src/main/resources/application.properties
+++ b/pedi2t/src/main/resources/application.properties
@@ -10,10 +10,11 @@ server.error.include-binding-errors=always
 # =====================================
 # CONFIGURACIÓN DE LA BASE DE DATOS 
 # =====================================
-spring.datasource.url=jdbc:mysql://localhost:3306/pedi2t_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/pedi2t_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # =====================================
 # CONFIGURACIÓN DE JPA / HIBERNATE
