--- a/pedi2t/src/main/resources/application.properties
+++ b/pedi2t/src/main/resources/application.properties
@@ -16,8 +16,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # =====================================
 # CONFIGURACIÓN DE JPA / HIBERNATE
 # =====================================
-# Crea o actualiza las tablas automáticamente según tus entidades
+# Configuración de Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # Muestra las consultas SQL en la consola
 spring.jpa.show-sql=true
@@ -30,5 +31,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jackson.time-zone=America/Argentina/Buenos_Aires
 spring.jackson.locale=es_AR
 
-# Dialecto de Hibernate (usa el de MySQL o MariaDB según tu caso)
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# Dialecto de Hibernate (usa el de MySQL 8)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
+jwt.secret=EstaEsUnaClaveSecretaSuperLargaParaMiAppPedi2T
