--- a/pedi2t/src/main/resources/application.properties
+++ b/pedi2t/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=pedi2t
 # =====================================
 # CONFIGURACIÓN DE LA BASE DE DATOS 
 # =====================================
-spring.datasource.url=jdbc:mysql://localhost:3308/pedi2t_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/pedi2t_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -36,3 +36,18 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 jwt.secret=EstaEsUnaClaveSecretaSuperLargaParaMiAppPedi2T
+
+# =====================================
+# CONFIGURACIÓN DE CLOUDINARY
+# =====================================
+# Obtener estos valores desde https://console.cloudinary.com/
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME:your-cloud-name}
+cloudinary.api-key=${CLOUDINARY_API_KEY:your-api-key}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET:your-api-secret}
+
+# =====================================
+# CONFIGURACIÓN DE UPLOAD DE ARCHIVOS
+# =====================================
+# Configuración de tamaño máximo de archivos
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
